--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "obd-parser-cli",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "CLI to read diagnostic data from vehicles via OBD (ELM 327) connections",
   "bin": {
     "obd": "bin/index.js"
@@ -24,7 +24,8 @@
     "vehicle",
     "diagnostics",
     "can",
-    "car"
+    "car",
+    "canbus"
   ],
   "author": "Evan Shortiss",
   "license": "GPL-3.0",
@@ -32,17 +33,25 @@
     "bluebird": "~3.4.6",
     "commander": "~2.9.0",
     "lodash": "~4.17.2",
-    "obd-parser": "~0.2.1",
-    "obd-parser-development-connection": "~0.1.2",
+    "mkdirp": "~0.5.1",
+    "obd-parser": "~0.3.0",
+    "obd-parser-development-connection": "~0.2.0",
     "obd-parser-serial-connection": "~0.1.1",
-    "table": "~4.0.1"
+    "p-queue": "~0.2.0",
+    "promise-queue": "~2.2.3",
+    "queue-that-promise": "~1.2.1",
+    "stream-counter": "~1.0.0",
+    "table": "~4.0.1",
+    "uuid": "~3.0.1"
   },
   "devDependencies": {
     "@types/bluebird": "~3.0.36",
     "@types/commander": "~2.3.31",
     "@types/core-js": "~0.9.35",
     "@types/lodash": "~4.14.41",
+    "@types/mkdirp": "~0.3.29",
     "@types/node": "0.0.2",
+    "@types/uuid": "~2.0.29",
     "typescript": "~2.0.10"
   },
   "main": "bin/index.js",
